# twop

./: .gitignore  .~lock.Sync TaskWarrior OpenProject.odt#  README.md  Sync TaskWarrior OpenProject.odt  pyproject.toml  readme.md  setup.py  twop.json
twop/: __init__.py  main.py  openproject.py  taskwarrior.py  twop.py  twopTask.py
