[tool.poetry]
name = "twop"
version = "0.1.0"
description = "TaskWarrior <-> OpenProject task synchronization"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
taskwarrior = "^0.1.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
twop = "twop.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
